@@ -7,6 +7,7 @@ CHANGELOG
 2012/XX/XX Version 1.0.0 alpha 3
 --------------------------------
 
+* Added `patch.stopall` method to stop all active patches created by `start`
 * BUGFIX: calling `MagicMock.reset_mock` wouldn't reset magic method mocks
 * BUGFIX: calling `reset_mock` on a `MagicMock` created with autospec could
   raise an exception
